client/src/App.css
.landing-page {
  background-image: url('../src/images/landing-page-image.jpg');
  background-position: center;
  background-size: cover;
  height: 100vh;
}

.landing-page-overlay {
  background-color: rgba(0, 0, 0, .55);
  height: 100%;
}

.landing-page-divider {
  width: 20%;
  border-top: 1px solid #F8F9FA;
}

.vertical-center {
  display: flex;
  align-items: center;
  height: 100%;
}

.rounded-button {
  border-radius: 25px;
}

.about-page {
  background-image: url('../src/images/daddy-daughter.jpg');
  background-repeat: no-repeat;
  background-position: 0 25%;
  background-size: cover;
  height: 100%;
}

.about-page-overlay {
  background-color: rgba(0, 0, 0, .7);
  height: 100%;
}

.about-tagline {
  padding-top: 10%;
  height: 50vmax;
}

.about-text {
  height: 100%;
  padding-bottom: 10%
}

.news-feed {
  height: 100vh;
  overflow-y: scroll;
}

.news-feed::-webkit-scrollbar {
  display: none;
}

.comment {
  border-bottom: 1px solid #e3e3e3;
}

.comment-text {
  font-size: 1.1rem;
}

.comment-divider {
  border-bottom: 1px solid #e3e3e3;
}

.comments-button:hover {
  text-decoration: underline;
}

.comments-button:focus {
  box-shadow: none;
}

.comments-button:not(:disabled):not(.disabled):active:focus {
  text-decoration: underline;
  box-shadow: none;
}

.sidebar-button {
  width: 100%;
  border-radius: 0;
  opacity: .8;
  padding-top: .75rem;
  padding-bottom: .75rem;
}

.sidebar-button:not(:disabled):not(.disabled):active:focus {
  box-shadow: none;
}

.sidebar-button:focus {
  background-color: #ee686e;
  box-shadow: none;
}

.sidebar-button:first-of-type {
  border-radius: 10px 10px 0 0;
}

.sidebar-button:last-of-type {
  border-radius: 0 0 10px 10px;
}

.footer {
  position: inherit;
  bottom: 0;
}

.like:hover i {
  transform: scale(1.5);
  transition-duration: 0.3s;
}

.unlike:hover i {
  transform: scale(1.5);
  transition-duration: 0.3s;
}

